--- a/.travis.yml
+++ b/.travis.yml
@@ -1,13 +1,16 @@
- language: 
-  python
-  python:
-    - "3.6"
-  script:
-    - pytest
-    install:
+language: python
+
+python:
+  - "3.6"
+  
+install:
   - pip install -r requirements.txt
 
-# command to run tests
-script: pytest
+script:
+  - pytest
+    
+after_success:
+  - coveralls
+
 
 
